Refactored and changed to gradle, added benchmark class